# ledger-service

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
ledger-api/: .env.example  Dockerfile  go.mod
ledger-api/cmd/api/: main.go
ledger-api/internal/adapters/http/: handler.go  middleware.go  router.go
ledger-api/internal/adapters/postgres/: account_repo.go  db.go  transaction_repo.go
ledger-api/internal/adapters/redis/: event_bus.go
ledger-api/internal/domain/account/: entity.go  events.go
ledger-api/internal/domain/transaction/: entity.go  events.go
ledger-api/internal/ports/: event_bus.go  repository.go
ledger-api/internal/usecases/: create_account.go  create_transaction.go  get_summary.go
ledger-api/tests/integration/: account_test.go  setup_test.go  transaction_test.go
ledger-processor/: .env.example  Cargo.toml  Dockerfile
ledger-processor/src/: main.rs
ledger-processor/src/adapters/: mod.rs  postgres_repo.rs  redis_consumer.rs
ledger-processor/src/domain/: transaction.rs
ledger-processor/src/ports/: mod.rs  repository.rs
