[package]
name = "ledger-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ledger-processor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
